# agent-teachers-assistant-with-tools

./: .cursoringore  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dockerfile  langgraph.json  pyproject.toml  run.sh  streamlit_app.py  test_fixes.md
.github/workflows/: unit-tests.yml
pages/: streaming.py  write_stream.py
src/agent_arcade_tools/: __init__.py  configuration.py  graph.py  state.py  tools.py
src/agent_arcade_tools/backend/: __init__.py  configuration.py  graph.py  tools.py  utils.py
src/agent_arcade_tools/frontend/: run.py  streamlit_app.py
tests/: test_graph.py  test_streamlit_app.py
tests/integration_tests/: test_graph.py  test_model_config.py
tests/unit_tests/: test_configuration.py  test_graph_structure.py
